# m5stack-dial-toolkit

./: .gitignore  CLAUDE.md  README.md  platformio.ini  pyproject.toml
design/: claude-usage-hud.html  pcstats-hud.html  timeapp-hud.html  watchface-scope.html
docs/superpowers/plans/: 2026-07-11-power-off-deep-sleep.md  2026-07-12-pc-claude-monitor-apps.md
docs/superpowers/specs/: 2026-07-11-power-off-deep-sleep-design.md  2026-07-12-pc-claude-monitor-apps-design.md
src/: main.cpp
src/apps/: common_define.h
src/apps/app_ble_volume/: app_ble_volume.cpp  app_ble_volume.h
src/apps/app_claude_usage/: app_claude_usage.cpp  app_claude_usage.h
src/apps/app_more_menu/: app_more_menu.cpp  app_more_menu.h  more_menu_render_callback.hpp  more_menu_selected_callback.cpp
src/apps/app_pc_stats/: app_pc_stats.cpp  app_pc_stats.h
src/apps/app_pomodoro/: app_pomodoro.cpp  app_pomodoro.h
src/apps/app_rfid_test/: app_rfid_test.cpp
src/apps/app_set_brightness/: app_set_brightness.cpp  app_set_brightness.h
src/apps/app_set_time/: app_set_time.cpp  app_set_time.h
src/apps/app_stopwatch/: app_stopwatch.cpp  app_stopwatch.h
src/apps/app_temp_demo/: app_temp_demo.cpp
src/apps/app_timer/: app_timer.cpp  app_timer.h
src/apps/app_watchface/: app_watchface.cpp  app_watchface.h
src/apps/launcher/: launcher.cpp  launcher.h  launcher_render_callback.hpp
src/hal/: hal.cpp  hal.h
src/hal/buzzer/: hal_buzzer.hpp
src/hal/rtc/: hal_rtc.hpp
tools/: claude_sender.py  gen_cyber_icons.py  gen_launcher_icons.py  png_to_icon.py  sysstat_sender.py
(+21 files in other folders)
