[project]
name = "m5stack-dial-toolkit-tools"
version = "0.1.0"
description = "Host-side Python tools for the M5Stack Dial Toolkit (Claude Usage / PC Stats senders)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "pyserial>=3.5",
]

[project.optional-dependencies]
ble = [
    "bleak>=3.0.2",
]
gpu = [
    "nvidia-ml-py>=13.610.43",
]
wintemp = [
    "wmi>=1.5.1",
]
